BPE25-xxx: fix ugly volume slider on firefox, make square shaped

--- a/styles.css
+++ b/styles.css
@@ -266,35 +266,34 @@
   -webkit-appearance: none;
 }
 #bpe-volume-slider::-webkit-slider-thumb {
-  width: .25rem;
+  width: 1rem;
   height: 1rem;
   background: var(--progbar-fill-bg-right);
+  border: none;
   border-radius: 25%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 
-  cursor: pointer;
   transition: all 0.2s ease;
 
   appearance: none;
   -webkit-appearance: none;
 }
 #bpe-volume-slider::-webkit-slider-thumb:hover {
-  transform: scale(1.25);
+  scale: 1.1;
   background: var(--progbar-fill-bg-left);
-  border-radius: 33%;
 }
 #bpe-volume-slider::-moz-range-thumb {
-  width: .25rem;
-  height: 1.125rem;
+  width: 1rem;
+  height: 1rem;
   background: var(--progbar-fill-bg-right);
   border: none;
-  border-radius: 20%;
+  border-radius: 25%;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 
-  cursor: pointer;
   transition: all 0.2s ease;
 }
 #bpe-volume-slider::-moz-range-thumb:hover {
-  transform: scale(1.2);
+  scale: 1.1;
   background: var(--progbar-fill-bg-left);
 }
 
